// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

=====================================output=====================================
// @flow

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');

=====================================output=====================================
// @flow
require("./bar");

================================================================================
`;
